[package]
name = "rust-blockchain"
version = "0.1.0"
authors = ["JuantAldea <JuantAldea@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-modules = "0.4.4"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
hex = "*"
crypto-hash = "0.3.4"
